src/ui/render/snapshots/herdr_worktree_nav__ui__render__panes__tests__a_state_chip_and_a_typed_query_sit_beside_each_other.snap
---
source: src/ui/render/panes.rs
expression: "screen(&state, 92, 6)"
---
" / ● blocked  cla█                                                                  5 panes "
"────────────────────────────────────────────────────────────────────────────────────────────"
"   └── ● develop       /wt/develop                                                         │"
"      └── ● claude     w3:p1                                                               █"
" me/site · develop · w3:p1 · blocked · /wt/develop ─────────────────────────────────────────"
" ↵ keep search  ctrl+u clear  esc cancel  ↑↓ move  ←→ repo                                  "
