src/ui/render/snapshots/herdr_worktree_nav__ui__render__panes__tests__draws_a_search_with_its_non_matching_context_still_present.snap
---
source: src/ui/render/panes.rs
expression: "screen(&state, 92, 12)"
---
" / codex█                                                                           5 panes "
"────────────────────────────────────────────────────────────────────────────────────────────"
" ◆ ● me/app (3)                                                                             "
"   └── ○ feat/login       /wt/feat-login                                                    "
"      └── ○ codex         w2:p1                                                             "
"                                                                                            "
"                                                                                            "
"                                                                                            "
"                                                                                            "
"                                                                                            "
" me/app · feat/login · w2:p1 · idle · /wt/feat-login ───────────────────────────────────────"
" ↵ keep search  ctrl+u clear  esc cancel  ↑↓ move  ←→ repo                                  "
