src/ui/render/snapshots/herdr_worktree_nav__ui__render__panes__tests__draws_nothing_matching_without_losing_the_chrome.snap
---
source: src/ui/render/panes.rs
expression: "screen(&state, 92, 10)"
---
" / zzzz█                                                                            5 panes "
"────────────────────────────────────────────────────────────────────────────────────────────"
"nothing matches                                                                             "
"                                                                                            "
"                                                                                            "
"                                                                                            "
"                                                                                            "
"                                                                                            "
"────────────────────────────────────────────────────────────────────────────────────────────"
" ↵ keep search  ctrl+u clear  esc cancel  ↑↓ move  ←→ repo                                  "
